--- a/ProjectPlan/Views/Manage/EnableAuthenticator.cshtml
+++ b/ProjectPlan/Views/Manage/EnableAuthenticator.cshtml
@@ -4,6 +4,7 @@
     ViewData.AddActivePage(ManageNavPages.TwoFactorAuthentication);
 }
 
+/
 <h4>@ViewData["Title"]</h4>
 <div>
     <p>To use an authenticator app go through the following steps:</p>
@@ -49,4 +50,14 @@
 
 @section Scripts {
     @await Html.PartialAsync("_ValidationScriptsPartial")
+
+    <script type="text/javascript" src="~/lib/davidshimjs-qrcodejs-04f46c6/davidshimjs-qrcodejs-04f46c6/qrcode.min.js"></script>
+    <script type="text/javascript">
+        new QRCode(document.getElementById("qrCode"),
+            {
+                text: "@Html.Raw(Model.AuthenticatorUri)",
+                width: 150,
+                height: 150
+            });
+    </script>
 }
