--- a/ProjectPlan/Views/Shared/_Layout.cshtml
+++ b/ProjectPlan/Views/Shared/_Layout.cshtml
@@ -31,8 +31,6 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     <li><a asp-area="" asp-controller="Groups" asp-action="">Posts</a></li>
 
                 </ul>
@@ -45,6 +43,11 @@
         <hr />
         <footer>
             <p>&copy; 2017 - ProjectPlan</p>
+            <a class="twitter-share-button"
+               href="https://twitter.com/intent/tweet?text=What%20a%20great%20website!"
+               data-size="large">
+               Tweet Here!
+            </a>
         </footer>
     </div>
 
