--- a/ProjectPlan/Views/Groups/Edit.cshtml
+++ b/ProjectPlan/Views/Groups/Edit.cshtml
@@ -18,6 +18,7 @@
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
+            <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
