--- a/ProjectPlan/Views/Groups/Index.cshtml
+++ b/ProjectPlan/Views/Groups/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Index</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Submit Blog Post</a>
 </p>
 <table class="table">
     <thead>
@@ -21,7 +21,7 @@
             <th></th>
         </tr>
     </thead>
-    <tbody>
+<tbody>
 @foreach (var item in Model) {
         <tr>
             <td>
@@ -33,7 +33,8 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
+                <a asp-action="Comment" asp-route-id="@item.Id">Comment (@item.Comment.Count)</a>
             </td>
         </tr>
 }
