--- a/ProjectPlan/Views/Groups/Comment.cshtml
+++ b/ProjectPlan/Views/Groups/Comment.cshtml
@@ -7,6 +7,8 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
+        @Html.ValidationSummary(true)
+        @Html.AntiForgeryToken()
         <form asp-action="Comment">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
